new proj/src/objects/GE_ES_ITO_Asset_Contact_Role__c.object
<CustomObject>
    <description>This is the junction object for the multiple contacts association with the Installed Base.</description>
    <fields>
        <fullName>GE_ES_Contact_Roles__c</fullName>
        <label>Contact Role</label>
        <picklist>
            <picklistValues>
                <fullName>Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.GE_HQ_Contact_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Asset Contact Roles</relationshipLabel>
        <relationshipName>Asset_Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Installed_Base__c</fullName>
        <label>Installed Base</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>GE_Installed_Base__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Parent_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GE_Installed_Base__c</referenceTo>
        <relationshipLabel>Asset Contact Roles</relationshipLabel>
        <relationshipName>Asset_Contact_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Contact_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Asset Contact Roles (Site Account)</relationshipLabel>
        <relationshipName>Asset_Contact_Roles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Email__c</fullName>
        <formula>GE_ES_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Phone_Number__c</fullName>
        <formula>GE_ES_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferred Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Asset Contact Roles</relationshipLabel>
        <relationshipName>Asset_Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Asset Contact Role</label>
    <nameField>
        <label>Asset Contact Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>